# oddcmc

./: README.adoc
app/cmc/: cmc.c  pack.h
app/cmc-editor/: cmc-editor.c  init_cursor.h  nkStringBuffer.h  nkTriptych.h
example/: cmc.json
inc/oddcmc/: OCmc.h  OCmcCreator.h  OCmcInfo.h  OCmcIssue.h  OCmcPage-.h  OCmcPage.h  OCmcRelease.h  OCmcStory.h  OCmc_.h  apidecl.h  cmcdecl.h  error.h  oCmc.h  oCmcCreator.h  oCmcInfo.h  oCmcIssue.h  oCmcPage.h  oCmcRelease.h
mk/cmake/: CMakeLists.txt  Custom.cmake  FileLists.cmake
src/_/: unmarshal.h
src/oddcmc/: OCmc.c  OCmcCreator.c  OCmcInfo.c  OCmcInfo_.c  OCmcIssue.c  OCmcIssue_.c  OCmcPage.c  OCmcPage_.c  OCmcRelease.c  OCmcRelease_.c  OCmcStory_.c  OCmc_.c  cmcdecl.c  error.c  oCmc.c  oCmcCreator.c  oCmcInfo.c  oCmcIssue.c  oCmcPage.c  oCmcRelease.c
test/oddcmc/oCmcPage/: cmc_page_bool_value.c
